--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: space-around;
     /* box-shadow: 2mm 2mm 2mm #160040; */
-    color: whitesmoke;
+    /*color: whitesmoke;*/
     position: fixed;
     top: 0;
     left: 0;
@@ -60,3 +60,21 @@
 .GetStarted p {
     margin-right: 5px;
 }
+
+.card-login{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 30px;
+    color: black;
+}
+
+.textfield{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
