Modifying style files and adding one more component (CubeAnimationModal)

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,6 +14,11 @@
     align-items: center;
 }
 
+.Footer-content-left p {
+    cursor: pointer;
+    margin-bottom: 25px;
+}
+
 .Footer-content-left, .Footer-content-right {
     width: 30%;
     height: 140px;
