--- a/src/components/Login_Modal/Login_Modal.css
+++ b/src/components/Login_Modal/Login_Modal.css
@@ -15,13 +15,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .Queue_Modal {
     cursor: pointer;
 }
 
-input {
+.form-field {
     width: 500px;
     height: 40px;
     border: 1px solid #ccc;
@@ -38,8 +39,28 @@ input {
     border: none;
     border-radius: 5px;
     color: #ccc;
-    width: 100px;
+    width: 120px;
     height: 40px;
-    margin-left: 20px;
+    margin-top: 20px;
     font-size: 16px;
+    cursor: pointer;
+}
+
+.form-group {
+    text-align: left;
+}
+
+#form-field-number {
+    width: 70px;
+    text-align: center;
+}
+
+#modal-modal-description1 {
+    margin-left: 20px;
+}
+
+.form-error {
+    color: red;
+    font-size: 12px;
+    margin: 20px;
 }
