--- a/src/components/MainGridTables/MainGridTables.css
+++ b/src/components/MainGridTables/MainGridTables.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 10%;
+    height: 20%;
     background-color: #DFDFDE;
     color: #7952B3;
 }
@@ -48,4 +48,9 @@
     grid-template-columns: repeat(2, 1fr);
     margin-top: 20px;
     color: black;
+}
+
+.Capacity p, .Queue p {
+    font-size: 50px;
+    text-transform: uppercase;
 }
