--- a/src/components/MainGridTables/MainGridTables.css
+++ b/src/components/MainGridTables/MainGridTables.css
@@ -4,7 +4,7 @@
     /* justify-content: center; */
     align-items: center;
     width: 100%;
-    height: 600px;
+    height: auto;
     margin-top: 70px;
     /* background-color: #DFDFDE; */
 }
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 20%;
+    height: auto;
     background-color: #DFDFDE;
     color: #7952B3;
 }
@@ -45,7 +45,7 @@
 
 .MainGridTables-content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     margin-top: 20px;
     color: black;
 }
